tests/paczka1/fuzzy1/76344550.err
Error in line 9: F2zfAGjBaNw A750 54,8
Error in line 12: S684 S684 92,4
Error in line 17: uCUg S793 88,9
Error in line 23: uCUg A750 69,5
Error in line 26: b4Kt S793 20,3
Error in line 16: F2zfAGjBaNw S573 32,7
Error in line 24: onT35Jy S684 60,5
